# switchable

./: Cargo.toml  README.md  notes.md
src/: alias.rs  app.rs  commands.rs  config.rs  exitcode.rs  file.rs  main.rs  slang.rs  util.rs
