[package]
name = "switchable"
version = "0.1.0"
authors = ["Tilwa Qendov <tilwa.qendov@gmail.com>"]
edition = "2018"
license = "Artistic-2.0"

description = "Enable swithable graphics for certain commands"
readme = "README.md"
repository = "https://github.com/tqdv/switchable"
keywords = ["switchable", "graphics"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Slang
tear = "0.2"
thiserror = "1.0"
# UI
getopts = "0.2"
# Configuration
dirs = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
toml = "0.5" # Works with serde
# Functionality
regex = "1.3.7"

[profile.release]
lto = true
